# rmte

./: Cargo.toml  PROTOCOL.md  README.md
.github/workflows/: release.yml
client/: app.js  index.html
server/: Cargo.toml
server/src/: engine.rs  main.rs  palette.rs
test/: clear.mjs  clip.mjs  copy-predicted.mjs  cursor.mjs  e2e.mjs  fit.mjs  flood.mjs  overlay.mjs  overwrite.mjs  predict.mjs  sessions.mjs  socket-param.mjs  unix-socket.mjs  ws-override.mjs
