[package]
name = "rmte-server"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/eiiot/rmte"

[[bin]]
name = "rmte"
path = "src/main.rs"

[dependencies]
alacritty_terminal = "0.25"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
bytes = "1"
anyhow = "1"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"
